--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,15 @@
+back:
+    resource: "@BackBundle/Controller/"
+    type: annotation
+    prefix:   /back
+
+front:
+    resource: "@FrontBundle/Controller/"
+    type: annotation
+    prefix:   /front
+
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+    prefix:   /
