--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,15 +1,12 @@
 back:
-    resource: "@BackBundle/Controller/"
-    type: annotation
-    prefix:   /back
+    resource: "@BackBundle/Resources/config/routing.yml"
+    prefix:   /
 
 front:
-    resource: "@FrontBundle/Controller/"
-    type: annotation
-    prefix:   /front
+    resource: "@FrontBundle/Resources/config/routing.yml"
+    prefix:   /
 
 
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
-    prefix:   /
