--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+user:
+    resource: "@UserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 back:
     resource: "@BackBundle/Resources/config/routing.yml"
     prefix:   /
@@ -6,6 +10,16 @@ front:
     resource: "@FrontBundle/Resources/config/routing.yml"
     prefix:   /
 
+login: #kcdev
+    path: /login
+    defaults:
+        _controller: UserBundle:Security:login
+
+login_check: #kcdev
+    path: /login_check
+
+logout:
+    path: /logout
 
 app:
     resource: '@AppBundle/Controller/'
