--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,20 +2,41 @@
 # https://symfony.com/doc/current/security.html
 security:
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory: ~
+    encoders: #kcdev
+            Symfony\Component\Security\Core\User\User: plaintext
+            UserBundle\Entity\User: plaintext
 
-    firewalls:
+    role_hierarchy:  #kcdev
+            ROLE_ADMIN:       ROLE_USER
+            ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+    providers: #kcdev
+            main:
+              entity:
+                class:    UserBundle\Entity\User
+                property: username
+
+    firewalls: #kcdev
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         main:
-            anonymous: ~
+            pattern:   ^/
+            anonymous: true
+            form_login:
+              login_path: login
+              check_path: login_check
+            logout:
+              path:       logout
+              target:     login
+
+
+    access_control: #kcdev
+            #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
             # activate different ways to authenticate
+
+
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
             #http_basic: ~
