--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,17 +10,26 @@ front:
     resource: "@FrontBundle/Resources/config/routing.yml"
     prefix:   /
 
-login: #kcdev
-    path: /login
-    defaults:
-        _controller: UserBundle:Security:login
-
-login_check: #kcdev
-    path: /login_check
-
-logout:
-    path: /logout
-
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+#kcdev
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
