--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ security:
 
     encoders: #kcdev
             Symfony\Component\Security\Core\User\User: plaintext
-            UserBundle\Entity\User: plaintext
+            UserBundle\Entity\User: sha512
 
     role_hierarchy:  #kcdev
             ROLE_ADMIN:       ROLE_USER
@@ -12,9 +12,7 @@ security:
 
     providers: #kcdev
             main:
-              entity:
-                class:    UserBundle\Entity\User
-                property: username
+              id: fos_user.user_provider.username
 
     firewalls: #kcdev
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -24,12 +22,15 @@ security:
         main:
             pattern:   ^/
             anonymous: true
+            provider:     main
             form_login:
-              login_path: login
-              check_path: login_check
+              login_path: fos_user_security_login
+              check_path: fos_user_security_check
             logout:
-              path:       logout
-              target:     login
+              path:       fos_user_security_logout
+              target:     fos_user_security_login
+            remember_me:
+              secret:     %secret%
 
 
     access_control: #kcdev
