Début ajout des entités

--- a/src/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -8,3 +8,10 @@ UserBundle\Entity\User:
             id: true
             generator:
                 strategy: AUTO
+    fields:
+        telephone:
+            type: string
+            length: 255
+        adresse:
+            type: string
+            length: 255
