--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,7 +3,6 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: "@FrontBundle/Resources/config/services.yml" }
-    - { resource: "@BackBundle/Resources/config/services.yml" }
     - { resource: "@UserBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
@@ -40,6 +39,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes:
+            - 'bootstrap_3_layout.html.twig'
 
 # Doctrine Configuration
 doctrine:
@@ -79,3 +80,16 @@ fos_user: #kcdev
     from_email:
               address: "%mailer_user%"
               sender_name: "%mailer_user%"
+
+
+#TwitterBootstrapBundle
+twitter_bootstrap:
+    local_js: '@AppBundle/Resources/public/js/bootstrap.min.js'
+    local_fonts_dir: '@AppBundle/Resources/public/fonts/'
+    local_css: '@AppBundle/Resources/public/css/bootstrap.min.css'
+    local_theme: '@AppBundle/Resources/public/css/bootstrap-theme.min.css'
+    local_cdn: 'cdn.domain.com'
+    version: 3.3.4
+    html5: true
+    async: false
+
