--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,10 +2,6 @@ user:
     resource: "@UserBundle/Resources/config/routing.yml"
     prefix:   /
 
-back:
-    resource: "@BackBundle/Resources/config/routing.yml"
-    prefix:   /
-
 front:
     resource: "@FrontBundle/Resources/config/routing.yml"
     prefix:   /
@@ -13,6 +9,16 @@ front:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+#kcdev
+charge:
+    resource: "@FrontBundle/Resources/config/routing/charge.yml"
+    prefix:   /charge
+
+#kcdev
+contrat:
+    resource: "@FrontBundle/Resources/config/routing/contrat.yml"
+    prefix:   /contrat
 
 #kcdev
 fos_user_security:
