--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
             "FrontBundle\\": "src/FrontBundle",
-            "BackBundle\\": "src/BackBundle",
             "UserBundle\\": "src/UserBundle"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
@@ -21,6 +20,8 @@
         "doctrine/doctrine-bundle": "^1.8",
         "doctrine/doctrine-fixtures-bundle": "~2.3",
         "doctrine/orm": "^2.5",
+        "evheniy/twitter-bootstrap-bundle": "1.*",
+        "friendsofsymfony/user-bundle": "dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
@@ -28,8 +29,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0",
-        "friendsofsymfony/user-bundle": "dev-master"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
