--- a/src/FrontBundle/Resources/config/doctrine/Message.orm.yml
+++ b/src/FrontBundle/Resources/config/doctrine/Message.orm.yml
@@ -15,4 +15,12 @@ FrontBundle\Entity\Message:
         datePublication:
             type: datetime
             column: date_publication
+
+    oneToOne:
+        user:
+          targetEntity: UserBundle\Entity\User
+          joinColumn:
+            name: user_id
+            referencedColumnName: id
+
     lifecycleCallbacks: {  }
