--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,7 +8,7 @@ security:
 
     role_hierarchy:  #kcdev
             ROLE_ADMIN:       ROLE_USER
-            ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+            ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers: #kcdev
             main:
@@ -34,7 +34,8 @@ security:
 
 
     access_control: #kcdev
-            #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+            - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+            - { path: ^/charge, roles: ROLE_USER}
             # activate different ways to authenticate
 
 
