--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
-    "bootstrap-sass": "^3.3.7"
+    "@symfony/webpack-encore": "^0.17.1",
+    "bootstrap-sass": "^3.3.7",
+    "jquery": "^3.2.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
+  },
+  "scripts": {
+    "dev": "./node_modules/.bin/encore dev --watch"
   }
 }
